--- a/html-book/index/index.html
+++ b/html-book/index/index.html
@@ -42,7 +42,11 @@
       </div>
     </header>
     <div class="hero">
-      <div class="hero-container"></div>
+      <div class="hero-container">
+        <div class="hero-image">
+          <img src="images/home-mainphoto.jpg" alt="" />
+        </div>
+      </div>
     </div>
     <div class="page-main">
       <div class="main-container"></div>
