--- a/html-book/index/index.html
+++ b/html-book/index/index.html
@@ -46,6 +46,9 @@
         <div class="hero-image">
           <img src="images/home-mainphoto.jpg" alt="" />
         </div>
+        <div class="hero-logo">
+          <img src="images/home-logo.svg" alt="Tansaku!" />
+        </div>
       </div>
     </div>
     <div class="page-main">
