--- a/html-book/index/index.html
+++ b/html-book/index/index.html
@@ -52,7 +52,13 @@
       </div>
     </div>
     <div class="page-main">
-      <div class="main-container"></div>
+      <div class="main-container">
+        <div class="home-lead">
+          <p>
+            行ったことのない街を歩いたり、知らなかった技術を学んだり、食べたことのないもの見つけたり。好奇心いっぱいの探索を。
+          </p>
+        </div>
+      </div>
     </div>
     <div class="news">
       <div class="news-container"></div>
