--- a/html-book/index/index.html
+++ b/html-book/index/index.html
@@ -58,6 +58,14 @@
             行ったことのない街を歩いたり、知らなかった技術を学んだり、食べたことのないもの見つけたり。好奇心いっぱいの探索を。
           </p>
         </div>
+        <!--- 最新記事 --->
+        <h2>Latest</h2>
+
+        <!---  /最新記事 --->
+        <!--- 人気記事 --->
+        <h2>Popular</h2>
+
+        <!--- /人気記事 --->
       </div>
     </div>
     <div class="news">
