--- a/html-book/index/index.html
+++ b/html-book/index/index.html
@@ -60,8 +60,16 @@
         </div>
         <!--- 最新記事 --->
         <h2>Latest</h2>
-
+        <div class="home-latest">
+          <div class="latest-item"></div>
+          <div class="latest-item"></div>
+          <div class="latest-item"></div>
+          <div class="latest-item"></div>
+          <div class="latest-item"></div>
+          <div class="latest-item"></div>
+        </div>
         <!---  /最新記事 --->
+
         <!--- 人気記事 --->
         <h2>Popular</h2>
 
