--- a/html-book/index/index.html
+++ b/html-book/index/index.html
@@ -61,12 +61,118 @@
         <!--- 最新記事 --->
         <h2>Latest</h2>
         <div class="home-latest">
-          <div class="latest-item"></div>
-          <div class="latest-item"></div>
-          <div class="latest-item"></div>
-          <div class="latest-item"></div>
-          <div class="latest-item"></div>
-          <div class="latest-item"></div>
+          <div class="latest-item">
+            <div class="latest-image">
+              <a href="#"><img src="images/latest-photo1.jpg" alt="" /></a>
+            </div>
+            <div class="latest-text">
+              <h3>
+                <a href="#"
+                  >知らない街の「地元」の空気に触れたい！ファーマーズマーケットには情報がいっぱい</a
+                >
+              </h3>
+              <div class="home-tag">
+                <span><a href="#">歩く</a></span>
+                <span><a href="#">食べる</a></span>
+              </div>
+              <div class="home-info">
+                <span>サンフランシスコ／US</span>
+              </div>
+            </div>
+          </div>
+          <div class="latest-item">
+            <div class="latest-image">
+              <a href="#"><img src="images/latest-photo2.jpg" alt="" /></a>
+            </div>
+            <div class="latest-text">
+              <h3>
+                <a href=""
+                  >伝統柄からモダンデザインまでそろった植木鉢専門の工房で絵付けを体験</a
+                >
+              </h3>
+              <div class="home-tag">
+                <span><a href="#">体験する</a></span>
+              </div>
+              <div class="home-info">
+                <span>鎌倉／Japan</span>
+              </div>
+            </div>
+          </div>
+          <div class="latest-item">
+            <div class="latest-image">
+              <a href="#"><img src="images/latest-photo3.jpg" alt="" /></a>
+            </div>
+            <div class="latest-text">
+              <h3>
+                <a href=""
+                  >どこを切り取っても面白い。カラフルな家が立ち並ぶ水の都で色の観察散歩</a
+                >
+              </h3>
+              <div class="home-tag">
+                <span><a href="#">歩く</a></span>
+              </div>
+              <div class="home-info">
+                <span>ベネチア／Italy</span>
+              </div>
+            </div>
+          </div>
+          <div class="latest-item">
+            <div class="latest-image">
+              <a href="#"><img src="images/latest-photo4.jpg" alt="" /></a>
+            </div>
+            <div class="latest-text">
+              <h3>
+                <a href=""
+                  >ふわっとした穴の空いていないドーナッツ食べくらべ。ロンドンの一番人気は？</a
+                >
+              </h3>
+              <div class="home-tag">
+                <span><a href="#">食べる</a></span>
+                <span><a href="#">歩く</a></span>
+              </div>
+              <div class="home-info">
+                <span>ロンドン／UK</span>
+              </div>
+            </div>
+          </div>
+          <div class="latest-item">
+            <div class="latest-image">
+              <a href="#"><img src="images/latest-photo5.jpg" alt="" /></a>
+            </div>
+            <div class="latest-text">
+              <h3>
+                <a href=""
+                  >絵本に出てくるようなどこまでも続く道。走って行った先にあったものは……？</a
+                >
+              </h3>
+              <div class="home-tag">
+                <span><a href="#">体験する</a></span>
+                <span><a href="#">歩く</a></span>
+              </div>
+              <div class="home-info">
+                <span>ロトルア／New Zealand</span>
+              </div>
+            </div>
+          </div>
+          <div class="latest-item">
+            <div class="latest-image">
+              <a href="#"><img src="images/latest-photo6.jpg" alt="" /></a>
+            </div>
+            <div class="latest-text">
+              <h3>
+                <a href=""
+                  >日本の縁日みたい！カーニバルの出店にはその土地のカルチャーが詰まっている</a
+                >
+              </h3>
+              <div class="home-tag">
+                <span><a href="#">食べる</a></span>
+                <span><a href="#">歩く</a></span>
+              </div>
+              <div class="home-info">
+                <span>デュッセルドルフ／Germany</span>
+              </div>
+            </div>
+          </div>
         </div>
         <!---  /最新記事 --->
 
