--- a/html-book/index/index.html
+++ b/html-book/index/index.html
@@ -178,7 +178,60 @@
 
         <!--- 人気記事 --->
         <h2>Popular</h2>
-
+        <div class="home-popular">
+          <div class="popular-item">
+            <div class="popular-photo">
+              <a href="#"><img src="images/popular-photo1.jpg" alt="" /></a>
+            </div>
+            <div class="popular-text">
+              <h3>
+                <a href="#"
+                  >カフェめぐり3年間、まじめなコーヒーと素朴なスイーツに行き着いた</a
+                >
+              </h3>
+              <p>
+                ほどよい苦味が心地よいコーヒーと、卵の味が濃いドーナッツ。素朴で実直な味で繰り返し立ち寄りたくなるこのお店は、カフェ巡りが趣味だった店主の哲学から生まれました。
+              </p>
+              <div class="home-info">
+                <span>東京／Japan</span>
+              </div>
+            </div>
+          </div>
+          <div class="popular-item">
+            <div class="popular-photo">
+              <a href="#"><img src="images/popular-photo2.jpg" alt="" /></a>
+            </div>
+            <div class="popular-text">
+              <h3>
+                <a href="#"
+                  >ドイツの大定番プレッツェル、作ってわかった独特の形の秘密</a
+                >
+              </h3>
+              <p>
+                日本では見たことしかなかったプレッツェルでしたが、本場ドイツで食べてすっかりファンに。地元のベーカリーでプレッツェル作りを体験して、地元おすすめの食べ方を教えてもらいました。
+              </p>
+              <div class="home-info">
+                <span>バイエルン／Germany</span>
+              </div>
+            </div>
+          </div>
+          <div class="popular-item">
+            <div class="popular-photo">
+              <a href="#"><img src="images/popular-photo3.jpg" alt="" /></a>
+            </div>
+            <div class="popular-text">
+              <h3>
+                <a href="#">あの名作が生まれた絵本作家のアトリエを訪ねて</a>
+              </h3>
+              <p>
+                子どもの頃から大好きだった絵本「ぞうとくじら」の作者海川やまさん訪ねました。海の見える小高い丘の上にあるアトリエで生まれたたくさんの絵本に共通する視点とは……。
+              </p>
+              <div class="home-info">
+                <span>尾道／Japan</span>
+              </div>
+            </div>
+          </div>
+        </div>
         <!--- /人気記事 --->
       </div>
     </div>
