--- a/html-book/index/index.html
+++ b/html-book/index/index.html
@@ -235,9 +235,44 @@
         <!--- /人気記事 --->
       </div>
     </div>
+    <!--- ニュース --->
     <div class="news">
-      <div class="news-container"></div>
+      <div class="news-container">
+        <h2>News</h2>
+        <div class="home-news">
+          <dl>
+            <dt>2021.3.25</dt>
+            <dd>
+              4月15日にトークイベント「ドイツビールの魅力再発見」（ドイツビールとおつまみ付き）を開催します。<a
+                href="#"
+                >［<i class="fas fa-arrow-circle-right"></i> 全文を読む］</a
+              >
+            </dd>
+          </dl>
+          <dl>
+            <dt>2021.2.15</dt>
+            <dd>
+              Tansaku!
+              のオープン10周年を記念して、プレゼントキャンペーンを実施します。<a
+                href="#"
+                >［<i class="fas fa-arrow-circle-right"></i> 全文を読む］</a
+              >
+            </dd>
+          </dl>
+          <dl>
+            <dt>2021.1.30</dt>
+            <dd>
+              Tansaku!
+              のウェブサイトをリニューアルしました。新連載が2本スタートします。<a
+                href="#"
+                >［<i class="fas fa-arrow-circle-right"></i> 全文を読む］</a
+              >
+            </dd>
+          </dl>
+        </div>
+      </div>
     </div>
+    <!--- /ニュース --->
 
     <div class="page-bottom">
       <div class="bottom-container">
