--- a/html-book/sidebar/sidebar-post.html
+++ b/html-book/sidebar/sidebar-post.html
@@ -202,23 +202,14 @@
           </main>
           <aside class="columns-side">
             <div class="side-container">
-              <div>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque
-                repudiandae et similique itaque esse. Necessitatibus minus
-                voluptas id repellat, voluptate magnam vitae, dolorum cum
-                repellendus quos ea voluptatem aperiam quibusdam!
-              </div>
-              <div>
-                Quae cumque et reiciendis odio, quaerat earum, alias harum
-                incidunt voluptates quis similique magni suscipit unde ab.
-                Perferendis est reprehenderit, qui, maxime culpa quae illo unde
-                quo! Laudantium, corporis, natus.
-              </div>
-              <div>
-                Pariatur soluta, officiis officia sequi facere repellat non
-                fugiat voluptatem quos nisi. In ullam, aliquam dolore! Id
-                impedit molestiae sapiente officia, totam ullam optio, eum quia
-                quisquam aperiam quasi nemo.
+              <div class="side-popular">
+                <a href="#">
+                  <h2>Special</h2>
+                  <img src="images/latest-photo3.jpg" alt="" />
+                  <p>
+                    どこを切り取っても面白い。カラフルな家が立ち並ぶ水の都で色の観察散歩
+                  </p>
+                </a>
               </div>
             </div>
           </aside>
