--- a/html-book/sidebar/sidebar-post.html
+++ b/html-book/sidebar/sidebar-post.html
@@ -276,6 +276,24 @@
                   </li>
                 </ul>
               </div>
+              <div class="side-book">
+                <h2>BOOK</h2>
+                <div class="book-info">
+                  <div class="book-image">
+                    <img src="images/book-cafe.png" alt="" />
+                  </div>
+                  <div class="book-text">
+                    <p><strong>コーヒー好きのカフェめぐり</strong></p>
+                    <p>
+                      Tansaku!編集部<br />
+                      ¥1,600（税別）
+                    </p>
+                  </div>
+                  <div class="buy">
+                    <button type="button">購入</button>
+                  </div>
+                </div>
+              </div>
             </div>
           </aside>
         </div>
